Switching to CodeCov.io, as Coveralls.io seems unsupported

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,7 @@ env:
 
 script:
   - mix deps.get
-  - mix coveralls.travis
+  - mix coveralls.json
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
