Running Dialyzer on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
 script:
   - mix deps.get
   - mix coveralls.json
+  - MIX_ENV=dev mix dialyzer
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
